infrastructure/gitea/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-https
  namespace: gitea
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: websecure
    namespace: gateway-system
  hostnames:
  - "gitea.crulabs.intern"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gitea
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-http
  namespace: gitea
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: web
    namespace: gateway-system
  hostnames:
  - "gitea.crulabs.intern"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
